update docs swagger
